# SysUtils

./: .gitignore  CLAUDE.md  Cargo.toml  Manager.ps1  README.md  SysUtils Manager.bat  SysUtils.bat  manager.sh
.kiro/specs/bugfix-and-v11-sprint/: .config.kiro  design.md  requirements.md  tasks.md
docs/: HARDWARE_SETUP.md  TROUBLESHOOTING.md  esp32s3_recovery.md  roadmap.md  virtualbox_linux_guide.md  virtualbox_windows_guide.md
phantom_firmware/: phantom_firmware.ino
scripts/: build_and_deploy.ps1
src/: app.rs  config.rs  file_logger.rs  hotkey_engine.rs  hw_link.rs  main.rs  models.rs  notifications.rs  screen_capture.rs  stealth.rs  system_info.rs
src/logic/: hardware.rs  keepalive.rs  mod.rs  monitor.rs  panic.rs  pulse.rs  sequence.rs
src/ui/: keepalive_tab.rs  logs_tab.rs  mod.rs  monitor_tab.rs  panic_tab.rs  pulse_tab.rs  sequence_tab.rs
